<resources>
    <string name="app_name">ShoesStoreApp</string>
    <string name="title_home">Home</string>
    <string name="title_categories">Categories</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_account">Account</string>
    <string name="title_search">Search</string>
    <string name="title_user_cart">Cart</string>
    <string name="title_hello">Hello</string>
    <string name="title_name">User name</string>
    <string name="title_welcome">Lets explore your favorites movie</string>
    <string name="title_popular_movie">Popular</string>
    <string name="title_trending_movie">Trending</string>
    <string name="title_top_rate_movie">Top Rate</string>
    <string name="title_name_movie">Name Movie</string>
    <string name="title_hour_movie">1h90p</string>
    <string name="title_genres">Genres:</string>
    <string name="title_popularity">Popularity</string>
    <string name="title_production_countries">Production Countries:</string>
    <string name="title_content_production_countries">United States of America</string>
    <string name="title_tag_line">Tag line</string>
    <string name="title_release_date">Release date</string>
    <string name="title_content_tag_line">Descend into fear</string>
    <string name="title_content_release_date">2020–07–09</string>
    <string name="title_content_popularity">471.097</string>
    <string name="title_overview">Overview:</string>
    <string name="title_content_overview">An adventure-loving couple convince their friends to explore a remote, uncharted cave system in the forests of Northern Australia. With a tropical storm approaching, they abseil into the mouth of the cave, but when the caves start to flood, tensions rise as oxygen levels fall and the friends find themselves trapped. Unknown to them, the storm has also brought in a pack of dangerous and hungry crocodiles.</string>
    <string name="title_content_genres">Horror\nThriller\nAdventure\nMystery</string>
    <string name="title_vote_average">Vote average</string>
    <string name="title_content_vote_average">5.1</string>
    <string name="title_vote_count">Vote count</string>
    <string name="title_content_vote_count">224</string>
    <string name="title_spoken_language">Spoken language:</string>
    <string name="title_content_spoken_language">English\nEspañol\nPусский\nFrançais</string>
    <string name="title_search_movie_actor">Search movie or actors…</string>
    <string name="title_content_language_movie">English</string>
    <string name="title_login_with_facebook">Login with Facebook</string>
    <string name="title_login_with_google">Login with Google</string>
    <string name="title_logout">Logout</string>
    <string name="title_email">email@gmail.com</string>
    <string name="title_about">About</string>
    <string name="title_order_history">Order history</string>
    <string name="title_revenue">Revenue</string>
    <string name="title_help">Help</string>
    <string name="title_trailer">Trailer</string>
    <string name="title_cast">Cast</string>
    <string name="title_show_more">Show more</string>
    <string name="title_show_less">Show less</string>
    <string name="rate_10">/10</string>
    <string name="do_not_blank">Do not blank!!!</string>
    <string name="enter_more_than_3_character">Enter more than 3 character</string>
    <string name="title_search_movie">Search movie…</string>
    <string name="title_search_actor">Search actor…</string>
    <string name="title_login_with">Login with</string>
    <string name="title_facebook">Login with Facebook</string>
    <string name="title_google">Login with Google</string>
    <string name="title_or">or</string>
    <string name="web_client_id">715995189099-a3me31gsb4jjdlg3bamdpj3hoogq98sn.apps.googleusercontent.com</string>
    <string name="facebook_app_id">797476330958485</string>
    <string name="fb_login_protocol_scheme">fb797476330958485</string>
    <string name="title_question_login">Do you want login?</string>
    <string name="title_no">No</string>
    <string name="title_yes">Yes</string>
    <string name="title_insert_email">Email…</string>
    <string name="title_insert_password">Password…</string>
    <string name="title_confirm_password">Confirm Password…</string>
    <string name="title_question_account">Don\'t have an account?</string>
    <string name="title_forgot_password">Forgot password?</string>
    <string name="title_login">Login</string>
    <string name="title_reset_password">Reset password</string>
    <string name="title_register">Register</string>
    <string name="title_phone">0123456789</string>
    <string name="title_input_your_name">Input your name…</string>
    <string name="title_input_phone_number">Input your phone number…</string>
    <string name="title_change_your_avatar">Change your avatar</string>
    <string name="title_add">Add</string>
    <string name="title_update">Update</string>
    <string name="title_delete">Delete</string>

    <string-array name="product">
        <item>Nike</item>
        <item>Adidas</item>
        <item>Vans</item>
        <item>Converse</item>
        <item>Puma</item>
        <item>Jordan</item>
    </string-array>

    <string name="title_adidas">Adidas</string>
    <string name="title_nike">Nike</string>
    <string name="title_vans">Vans</string>
    <string name="title_converse">Converse</string>
    <string name="title_puma">Puma</string>
    <string name="title_jordan">Jordan</string>
    <string name="title_add_product">Add Product</string>
    <string name="title_update_product">Update Product</string>
    <string name="title_update_information">Update Information</string>
    <string name="title_input_add_name">Type name product…</string>
    <string name="title_input_add_amount">Type amount product…</string>
    <string name="title_input_price_product">Type price product…</string>
    <string name="title_input_content_product">Type content product…</string>
    <string name="do_not_leave_blank">Don\'t leave blank!!!</string>
    <string name="add_image">Add image!!!</string>
    <string name="title_price_bigger_0">Price bigger 0!!!</string>
    <string name="title_amount_bigger_0">Amount bigger 0!!!</string>
    <string name="title_question_delete">Do you want delete item?</string>
    <string name="title_question_update">Do you want update item?</string>
    <string name="title_question_add_new_size">Do you want add new size?</string>
    <string name="title_add_to_cart">Add to cart</string>
    <string name="title_images">Images</string>
    <string name="title_input_amount">Type amount product order…</string>
    <string name="title_0">0</string>
    <string name="title_total">Total</string>
    <string name="title_order">Order</string>
    <string name="title_notification">Don\'t have product in cart</string>
    <string name="title_no_result">No result</string>
    <string name="title_blank" />
    <string name="title_amount_0">Amount: 0</string>
    <string name="title_back_to_login"><u>Back to Login</u></string>
    <string name="title_pick_type">Or?</string>
    <string name="title_admin">Admin</string>
    <string name="title_user">User</string>
    <string name="key_public_payment">pk_test_51JwIpuIid84sdPkuFSIgkd6WU6ym7cutXYuiGCYqI9SOVA6mqHwlRDhhunuRGi1HXN9gpx6OBrcbPH87SfBG9SWt00BpzgJRkw</string>
    <string name="key_secret_payment">sk_test_51JwIpuIid84sdPkutxs40oLJiaTibBbmsEvhjAsKzrnFcWWE7XPVp0Tv0crIK11PDMGz59jYszBbScGu6Xlvuls600NZ3q2nHI</string>
    <string name="title_confirm_order">Confirm Order</string>
    <string name="title_no_order_history">No order history</string>
    <string name="title_search_product">Input name product for search…</string>
    <string name="title_add_address">Add address</string>
    <string name="key_google_map">AIzaSyAJGuXBxn2FCFM6bkZd6xokjpTCuFbbkDw</string>
    <string name="title_pick_order_status">Pick order status…</string>
    <string name="title_new_order">New order</string>
    <string name="title_order_confirm">Order confirm</string>
    <string name="title_order_delivered">order is delivering</string>
    <string name="title_order_completed">Order completed</string>
    <string name="title_order_cancel">Order is canceled</string>

    <string-array name="listStatus">
        <item>Order confirmation</item>
        <item>Order are being delivered</item>
        <item>Order completed</item>
        <item>Order is canceled</item>
    </string-array>

</resources>