<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/frgDetailMovie_imgPosterMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@color/color_main"
            app:cardCornerRadius="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_400sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_deadpool" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/frgDetailMovie_tvTitleNameMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/title_name_movie"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frgDetailMovie_imgPosterMovie" />

        <LinearLayout
            android:id="@+id/frgDetailMovie_linearHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frgDetailMovie_tvTitleNameMovie">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/frgDetailMovie_tvTitleReleaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:text="@string/title_release_date"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/itemTrendingMovie_tvTitleReleaseDateMovie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/title_content_release_date"
                    android:textColor="@color/grey700"
                    android:textSize="@dimen/_10sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/frgDetailMovie_tvTitleVoteAverage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:text="@string/title_vote_average"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/itemTrendingMovie_tvTitleVoteAverageMovie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/title_content_vote_average"
                    android:textColor="@color/grey700"
                    android:textSize="@dimen/_10sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/frgDetailMovie_tvTitleVoteCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:text="@string/title_vote_count"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/itemTrendingMovie_tvTitleVoteCountMovie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/title_content_vote_count"
                    android:textColor="@color/grey700"
                    android:textSize="@dimen/_10sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/frgDetailMovie_tvTitlePopularity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:text="@string/title_popularity"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/itemTrendingMovie_tvTitlePopularityMovie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:text="@string/title_content_popularity"
                    android:textColor="@color/grey700"
                    android:textSize="@dimen/_10sdp" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/frgDetailMovie_tvTitleOverview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/title_overview"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frgDetailMovie_linearHorizontal" />

        <TextView
            android:id="@+id/frgDetailMovie_tvTitleOverviewMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:paddingHorizontal="@dimen/_8sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/title_content_overview"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frgDetailMovie_tvTitleOverview" />

        <TextView
            android:id="@+id/frgDetailMovie_tvTitleGenres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:text="@string/title_genres"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frgDetailMovie_tvTitleOverviewMovie" />

        <TextView
            android:id="@+id/frgDetailMovie_tvTitleGenresMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:paddingHorizontal="@dimen/_8sdp"
            android:text="@string/title_content_genres"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frgDetailMovie_tvTitleGenres" />

        <TextView
            android:id="@+id/frgDetailMovie_tvTitleProductionCountries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/title_production_countries"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frgDetailMovie_tvTitleGenresMovie" />

        <TextView
            android:id="@+id/frgDetailMovie_tvTitleProductionCountriesMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:paddingHorizontal="@dimen/_8sdp"
            android:text="@string/title_content_production_countries"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frgDetailMovie_tvTitleProductionCountries" />

        <TextView
            android:id="@+id/frgDetailMovie_tvTitleSpokenLanguages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/title_spoken_language"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frgDetailMovie_tvTitleProductionCountriesMovie" />

        <TextView
            android:id="@+id/frgDetailMovie_tvTitleSpokenLanguagesMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:paddingHorizontal="@dimen/_8sdp"
            android:text="@string/title_content_spoken_language"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frgDetailMovie_tvTitleSpokenLanguages" />

        <VideoView
            android:id="@+id/frgDetailMovie_videoView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300sdp"
            android:layout_marginTop="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@id/frgDetailMovie_tvTitleSpokenLanguagesMovie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/frgDetailMovie_tvTitleSpokenLanguagesMovie"/>

<!--        <WebView-->
<!--            android:id="@+id/frgDetailMovie_webView"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="@dimen/_300sdp"-->
<!--            android:layout_marginTop="@dimen/_16sdp"-->
<!--            android:layout_marginHorizontal="@dimen/_16sdp"-->
<!--            app:layout_constraintTop_toBottomOf="@id/frgDetailMovie_tvTitleSpokenLanguagesMovie"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="@id/frgDetailMovie_tvTitleSpokenLanguagesMovie"-->
<!--            tools:ignore="WebViewLayout" />-->


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>