<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main"
    tools:context=".ui.selection_type.SelectionActivity">

    <Button
        android:id="@+id/actSelection_btnAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_200sdp"
        android:text="@string/title_admin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/actSelection_tvPickType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_pick_type"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"
        android:padding="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/actSelection_btnUser"
        app:layout_constraintTop_toBottomOf="@id/actSelection_btnAdmin" />

    <Button
        android:id="@+id/actSelection_btnUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actSelection_tvPickType" />


</androidx.constraintlayout.widget.ConstraintLayout>