<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main">

    <TextView
        android:id="@+id/frgUserCart_tvNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_notification"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/frgUserCart_rcvListCart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintBottom_toTopOf="@id/frgUserCart_tvTotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/frgUserCart_tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:text="@string/title_total"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintBottom_toTopOf="@id/frgUserCart_tvOrder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frgUserCart_rcvListCart" />

    <TextView
        android:id="@+id/frgUserCart_tvValueTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_16sdp"
        android:text="@string/title_0"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="@id/frgUserCart_tvTotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/frgUserCart_tvTotal" />

    <TextView
        android:id="@+id/frgUserCart_tvOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@drawable/shape_radius_add_to_cart"
        android:padding="@dimen/_8sdp"
        android:text="@string/title_order"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>